--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "discordbot"]
 	path = discordbot
 	url = https://github.com/ClashOfClansStats/discordbot
+[submodule "docs"]
+	path = docs
+	url = https://github.com/ClashOfClansStats/docs.github.io
